Fixed errors in HTML causing misalignment in nav bar section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,9 +3,11 @@ html{
   font-family: Helvetica, sans-serif;
 }
 
-nav{
-  text-decoration: none;
-
+li,
+a{
+  list-style-type: none;
+  color: white;
+  font-size: 18px;
 }
 
 h1{
@@ -33,8 +35,6 @@ p{
 }
 
 .newyork{
-  font-size: 23px;
-  font-weight:bold;
   color: white;
   background-image: url(../images/the-flatiron-building.png)
 }
